cards list one recipe, search page design done

--- a/src/main/resources/static/css/mainstyle.css
+++ b/src/main/resources/static/css/mainstyle.css
@@ -100,7 +100,11 @@ img {
 	font-weight: bold;
 }
 
-.card-text {
+.card-body {
 	color: black;
+	text-shadow: none;
 }
 
+.card-title {
+	font-weight: bold;
+}
