--- a/src/main/resources/static/css/mainstyle.css
+++ b/src/main/resources/static/css/mainstyle.css
@@ -136,6 +136,12 @@ img {
 	border-radius: 8px;
 }
 
+#newform input {
+	margin: 10px 10px;
+	display: inline-block !important;
+	border-radius: 8px;
+}
+
 textarea {
 	margin: 10px 10px;
 	display: inline-block !important;
